Refactorizar el rol UserResponse y la configuración CORS, eliminar la validación RUT
Ahora, UserResponse utiliza un objeto RoleResponse en lugar de los campos roleId y roleName separados, con los cambios correspondientes en UserMapper y UserControllerTest. Se actualizó la configuración CORS de SecurityConfig para permitir todos los orígenes y métodos para /api/**, con las credenciales deshabilitadas. Se eliminaron las anotaciones de validación RUT y la comprobación de unicidad del modelo User y UserService.